// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLink accent is rendered 1`] = `
<button
  class="euiLink css-1hygjdm-euiLink-accent"
  type="button"
/>
`;

exports[`EuiLink allows for target and external to be controlled independently 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink button respects the type property 1`] = `
<button
  class="euiLink css-102pf9n-euiLink-primary"
  type="submit"
/>
`;

exports[`EuiLink danger is rendered 1`] = `
<button
  class="euiLink css-1l5hqr9-euiLink-danger"
  type="button"
/>
`;

exports[`EuiLink ghost is rendered 1`] = `
<button
  class="euiLink css-17ge910-euiLink-ghost"
  type="button"
/>
`;

exports[`EuiLink if href is not specified, it renders a button of type=button 1`] = `
<button
  class="euiLink css-102pf9n-euiLink-primary"
  type="button"
/>
`;

exports[`EuiLink it is an external link 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="/baz/bing"
  rel="noreferrer"
>
  <span
    class="css-q4vwwx-euiLink__externalIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
</a>
`;

exports[`EuiLink it passes the default props through 1`] = `
<button
  aria-label="aria-label"
  class="euiLink testClass1 testClass2 css-102pf9n-euiLink-primary"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiLink it supports both href and onClick 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="/imalink"
  rel="noreferrer"
/>
`;

exports[`EuiLink primary is rendered 1`] = `
<button
  class="euiLink css-102pf9n-euiLink-primary"
  type="button"
/>
`;

exports[`EuiLink subdued is rendered 1`] = `
<button
  class="euiLink css-7rgcqt-euiLink-subdued"
  type="button"
/>
`;

exports[`EuiLink success is rendered 1`] = `
<button
  class="euiLink css-pqycxy-euiLink-success"
  type="button"
/>
`;

exports[`EuiLink supports children 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`EuiLink supports disabled 1`] = `
<button
  class="euiLink css-18kfdsj-euiLink-disabled"
  disabled=""
  type="button"
/>
`;

exports[`EuiLink supports href 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="/baz/bing"
  rel="noreferrer"
/>
`;

exports[`EuiLink supports rel 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="hoi"
  rel="noreferrer stylesheet"
/>
`;

exports[`EuiLink supports target 1`] = `
<a
  class="euiLink css-102pf9n-euiLink-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="css-q4vwwx-euiLink__externalIcon"
    data-euiicon-type="popout"
  >
    External link
  </span>
  <span
    class="euiScreenReaderOnly"
  >
    (opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink text is rendered 1`] = `
<button
  class="euiLink css-qzrsgm-euiLink-text"
  type="button"
/>
`;

exports[`EuiLink warning is rendered 1`] = `
<button
  class="euiLink css-ai2j56-euiLink-warning"
  type="button"
/>
`;
